<resources>
    <string name="app_name">COMP_2160_Final_Project</string>

    <string name="modern_warfare_camo_tracker">Modern Warfare Camo Tracker</string>
    <string name="hello_blank_fragment">text1</string>

    <string name="gun_name">1911</string>
    <string name="gun_desc">Image of Gun</string>
    <string name="camo_desc">Image of Camo</string>

    <string name="objective_text">Total Kills: </string>
    <string name="Adder">Add 1</string>
    <string name="Resetter">Reset</string>
    <string name="Ticker">0</string>

    <string name ="AR">Assault Rifles</string>
    <string name ="SMG">Submachine Guns</string>
    <string name ="LMG">Light Machine Guns </string>
    <string name="MM">Marksman Rifles</string>
    <string name ="SR">Sniper Rifles</string>
    <string name ="HG">Hand Guns</string>
    <string name ="SG">Shotguns</string>
    <string name="Launcher">Rocket Launchers</string>
    <string name ="Melee">Melee</string>

    <string name="camoL">Camo List</string>
    <string name="challL">Challenge List </string>

    <string name="title">Companion App</string>
    <string name="todo">TODO</string>
    <string name="kilo_141">KILO 141</string>

    <string name="challenge_spec">Obtain 100 Kills</string>
    <string name="incrementer">Number:</string>
    <string name="lmgs">LMGS</string>
    <string name="msr">Marksman Rifles</string>
    <string name="smgs">SMGS</string>
    <string name="melee">MELEE</string>
    <string name="handguns">Handguns</string>
    <string name="shotguns">Shotguns</string>
    <string name="launchers">Launchers</string>
    <string name="assault_rifles">Assault Rifles</string>
    <string name="snipers">Snipers</string>


    <string-array name="handguns">
        <item>1911</item>
        <item>X16</item>
        <item>.357</item>
        <item>M19</item>
        <item>50GS</item>
        <item>Renetti</item>
    </string-array>

    <string-array name="rlaunchers">
        <item>PILA</item>
        <item>Strela-P</item>
        <item>JOKR</item>
        <item>RPG-7</item>
    </string-array>

    <string-array name="rAssault">
        <item>Kilo 141</item>
        <item>FAL</item>
        <item>M4A1</item>
        <item>FR 5.56</item>
        <item>Oden</item>
        <item>M13</item>
        <item>FN Scar 17</item>
        <item>AK-47</item>
    </string-array>

    <string-array name="rSMG">
        <item>AUG</item>
        <item>P90</item>
        <item>MP5</item>
        <item>Uzi</item>
        <item>PP19 Bizon</item>
        <item>MP7</item>
    </string-array>

    <string-array name="rLMG">
        <item>PKM</item>
        <item>SA87</item>
        <item>M91</item>
        <item>MG34</item>
    </string-array>

    <string-array name="rSR">
        <item>Dragunov</item>
        <item>HDR</item>
        <item>AX-50</item>
    </string-array>

    <string-array name="rShotgun">
        <item>Model 680</item>
        <item>R9–0 Shotgun</item>
        <item>725</item>
        <item>Origin 12 Shotgun</item>
    </string-array>

    <string-array name="rHandgun">
        <item>X16</item>
        <item>1911</item>
        <item>.357</item>
        <item>M19</item>
        <item>.50 GS</item>
    </string-array>

    <string-array name="rMelee">
        <item>Combat Knife</item>
        <item>Riot Shield</item>
    </string-array>
    <string-array name="desc">

    </string-array>
    <string-array name="rMarksman">
        <item>EBR-14</item>
        <item>MK2 Carbine</item>
        <item>Kar98K</item>
        <item>Crossbow</item>
        <item>SKS</item>
        <item>SP-R 208</item>
    </string-array>

</resources>