<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Handguns">

    <ImageButton
        android:id="@+id/imageBtn10"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/camo_skulls_1" />

    <ImageButton
        android:id="@+id/imageBtn9"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/camo_reptile_1" />

    <ImageButton
        android:id="@+id/imageBtn5"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/camo_splinter_6" />

    <ImageButton
        android:id="@+id/imageBtn8"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/camo_stripes_1" />

    <ImageButton
        android:id="@+id/imageBtn7"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/camo_tiger_1" />

    <ImageButton
        android:id="@+id/imageBtn6"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/camo_topo_1" />

    <ImageView
        android:id="@+id/imageView_weapon"
        android:layout_width="370dp"
        android:layout_height="99dp"
        android:contentDescription="@string/gun_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/icon_1911" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gun_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageButton
        android:id="@+id/imageBtn1"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        app:srcCompat="@drawable/camo_spray_1" />

    <ImageButton
        android:id="@+id/imageBtn2"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/camo_digital_1" />

    <ImageButton
        android:id="@+id/imageBtn3"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        app:srcCompat="@drawable/camo_dragon_1" />

    <ImageButton
        android:id="@+id/imageBtn4"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/camo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/camo_wood_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resetter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <TextView
        android:id="@+id/challengeTV"
        android:layout_width="347dp"
        android:layout_height="89dp"
        android:text="@string/challenge_spec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <TextView
        android:id="@+id/increment_TV"
        android:layout_width="264dp"
        android:layout_height="58dp"
        android:text="@string/Ticker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />


</androidx.constraintlayout.widget.ConstraintLayout>